@@ -1,3 +1,7 @@
 # JMH - Java Microbenchmark Harness
 
 I have collected some jmh tests that I have written
+
+To my self:
+- Generate GC-log with PID in name:
+    "-XX:+PrintGCDetails" & "-Xloggc:/Users/johanwistrom/tmp/test-gc_%p.log"
